crates/routa-watch/src/snapshots/routa_watch__tui__tests__routa_watch_tui_search.snap
---
source: crates/routa-watch/src/tui_tests.rs
assertion_line: 429
expression: "render_snapshot(&state, &mut cache, 120, 24)"
---
 RoutaWatch   repo:routa-js  branch:main  agents:2 active:1  dirty:1  unknown:1  synced 2m ago
┌Files───────────────────────────────────────────────────────────────────────────────┐┌Diff Preview────────────────────┐
│ ALL FILES  1 files  commits:...                                                    ││@@ -1,2 +1,3 @@                 │
│────────────────────────────────────────────────────────────────────────────────────││-use old                        │
│> route.ts                                      card/            D  -12        5m   ││+use new                        │
│                                                                                    ││+use cache                      │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    │└────────────────────────────────┘
│                                                                                    │┌Details─────────────────────────┐
│                                                                                    ││route.ts                        │
│                                                                                    ││src/app/api/a2a/card            │
└────────────────────────────────────────────────────────────────────────────────────┘│Lines: ...  Size: ...  Git      │
┌Fitness (Entrix Fast)───────────────────────────────────────────────────────────────┐│changes: ...                    │
│Health Run: idle (press g refresh, m switch mode)                                   ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
Tab focus  ↑↓ select  u unknown  d preview/diff  Pg scroll  f follow:on  T theme  Esc clear  g refresh fitness  m fast/f
